# SoftRenderer-Demo

./: CMakeLists.txt  Readme.md
Renderer/: CMakeLists.txt
Renderer/Core/: Camera.h  IShader.h  Mesh.h  Renderer.cpp  Renderer.h  Transform.h  Vertex.h
Renderer/Math/: Matrix.h  Vector.h
Renderer/Shaders/: DefaultShader.h  DiffuseShader.h
Renderer/Tools/: MeshTool.cpp  MeshTool.h
Renderer/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
Tests/: CMakeLists.txt  MathTest.cpp  RendererTest.cpp  WindowsTest.cpp
